Closed Bug 24253 Opened 25 years ago Closed 25 years ago

[REGRESSION] Redo adds newlines instead of redoing.

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: kinmoz, Assigned: kinmoz)

Details

(Whiteboard: will verify in 1/19 build.)

In the 01/18/2000 WinNt and Mac builds, redoing typed text adds new lines to the content. To reproduce: 1. Start up a blank editor window. 2. Type some text. 3. Undo everything you just typed. (CTRL-Z or Edit->Undo) 4. Now try to Redo everything. You will notice that you will get a blank line for every time you try to redo. If you do enough of them vertical scrollbars will appear on the right side of the window.
Assignee: jfrancis → kin
Target Milestone: M13
Reassigning to kin@netscape.com.
Status: NEW → ASSIGNED
Accepting bug. I have a fix for this that was reviewed by sfraser@netscape.com.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fix checked in and should appear in the 01/19/2000 QA builds: mozilla/editor/base/nsEditor.cpp mozilla/editor/base/nsEditor.h - Added IsMozEditorBogusNode() method. mozilla/editor/base/nsTextEditRules.cpp - Modified CreateBogusNodeIfNeeded() to check if bodyChild is a MozEditorBogusNode so that it doesn't create more than one. - Modified DidUndo() and DidRedo() to use IsMozEditorBogusNode(). r=sfraser@netscape.com
Whiteboard: will verify in 1/19 build.
will verify in 1/19 build.
Status: RESOLVED → VERIFIED
verified in 1/19 build.
You need to log in before you can comment on or make changes to this bug.