Fix for bug #24253: [REGRESSION] Redo adds newlines instead of redoing.

mozilla/editor/base/nsEditor.cpp
    mozilla/editor/base/nsEditor.h
      - Added IsMozEditorBogusNode() method.

    mozilla/editor/base/nsTextEditRules.cpp
      - Modified CreateBogusNodeIfNeeded() to check if bodyChild is a
        MozEditorBogusNode so that it doesn't create more than one.
      - Modified DidUndo() and DidRedo() to use IsMozEditorBogusNode().

r=sfraser@netscape.com