editor/libeditor/base/nsEditor.h
@@ -582,6 +582,9 @@ public:
   /** returns PR_TRUE if aNode is an editable node */
   PRBool IsEditable(nsIDOMNode *aNode);
 
+  /** returns PR_TRUE if aNode is a MozEditorBogus node */
+  PRBool IsMozEditorBogusNode(nsIDOMNode *aNode);
+
   /** returns PR_TRUE if content is an merely formatting whitespacce */
   PRBool IsEmptyTextContent(nsIContent* aContent);
 
